--- a/css/style.css
+++ b/css/style.css
@@ -770,6 +770,9 @@ body {
 }
 
 .footer .logo {
+  background: url(../images/logo.svg) no-repeat center left;
+  height: 80px;
+  width: 150px;
   -webkit-filter: brightness(600%);
           filter: brightness(600%);
 }
